--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -23,6 +23,7 @@
   <script src="/controllers/headersController.js"></script>
   <script src="/controllers/indexController.js"></script>
   <script src="/controllers/signInController.js"></script>
+  <script src="/controllers/drawerController.js"></script>
 
 </head>
 
