--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -15,6 +15,7 @@
   <script src="/javascripts/cryptoJs.js"></script>
   <script src="/javascripts/bootstrap-datetimepicker.js"></script>
   <script src="/javascripts/moment.js"></script>
+  <script src="/javascripts/general-functions.js"></script>
   <script src="/sb-admin/js/bootstrap.js"></script>
   <script src="/sb-admin/js/sb-admin-2.js"></script>
   <script src="/sb-admin/js/plugins/metisMenu/metisMenu.js"></script>
