-- fix app.js path

--- a/public/partials/signIn.html
+++ b/public/partials/signIn.html
@@ -10,7 +10,7 @@
                       <div ng-class="adminEmailGroup">
                         <label class="col-md-2 control-label"> User Name </label>
                         <div class="col-md-10">
-                          <input class="form-control" placeholder="User Name" type="text" ng-model="adminEmail">
+                          <input class="form-control" placeholder="Admin Email" type="text" ng-model="adminEmail">
                           <label class="control-label">{{adminEmailError}}</label>
                         </div>
                       </div>
@@ -18,7 +18,7 @@
                       <div ng-class="adminPassGroup">
                         <label class="col-md-2 control-label"> User Name </label>
                         <div class="col-md-10">
-                          <input class="form-control"  placeholder="adminPass" type="password" ng-model="adminPass">
+                          <input class="form-control"  placeholder="Admin Password" type="password" ng-model="adminPass">
                           <label class="control-label">{{adminPassError}}</label>
                         </div>
                       </div>
