-- remove crypto-js -- trying to make a cors post request

--- a/public/partials/index.html
+++ b/public/partials/index.html
@@ -12,7 +12,9 @@
   <script src="/javascripts/angular.js"></script>
   <script src="/javascripts/angular-route.js"></script>
   <script src="/javascripts/angular-cookies.js"></script>
-  <script src="/javascripts/cryptoJs.js"></script>
+  <script src="/javascripts/core.js"></script>
+  <script src="/javascripts/enc-base64.js"></script>
+  <script src="/javascripts/sha1.js"></script>
   <script src="/javascripts/bootstrap-datetimepicker.js"></script>
   <script src="/javascripts/moment.js"></script>
   <script src="/javascripts/general-functions.js"></script>
