--drawer not completed

--- a/public/partials/drawer.html
+++ b/public/partials/drawer.html
@@ -10,7 +10,7 @@
                       <div class="form-group">
                         <div class=" input-group date" id="startdrawer">
                           <!--<label>Date To</label>-->
-                          <input name="dateTo" placeholder="Date To" class="form-control" type="text" ng-model="startDate" readonly>
+                          <input name="dateTo" placeholder="Date To" class="form-control" type="text" ng-model="startDate" >
                           <span class="input-group-addon"><i class="glyphicon  glyphicon-calendar"></i></span>
                         </div>
                       </div>
