-- test gitlab ci and jenkins

--- a/public/partials/headers.html
+++ b/public/partials/headers.html
@@ -1,6 +1,6 @@
     <nav class="navbar navbar-default navbar-static-top" style="margin-bottom:0" role="navigation">
         <div class="navbar-header">
-            <a href="#/index" class="navbar-brand">KiMo</a>
+            <a href="#/index" class="navbar-brand">KiMo Drawer</a>
             <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
